--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,8 @@
 <h1><%= @article.title %></h1>
 <p> <%= @article.body %> </p>
+
+<%= render partial: "comment", collection: @article.comments %>
+
 <%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Are you sure my freind"} %>
 <%= link_to "Edit", edit_article_path(@article) %><br>
 <%= link_to "<< Back to articles list", articles_path %>
